--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,9 +61,18 @@ dependencies:
   fluttertoast: ^8.0.9
   #  in_app_purchase: ^3.0.6
   #  flutter_inapp_purchase: ^5.3.1
-  purchases_flutter: ^3.10.0
+  #  purchases_flutter: ^3.10.0
   google_sign_in_web: ^0.10.1+3
-  in_app_purchase: ^3.0.6
+  flutter_stripe: ^3.2.0
+  get: ^4.6.5
+  http: ^0.13.4
+  pull_to_refresh: ^2.0.0
+#  razorpay_web: ^1.3.3
+#  razorpay_flutter: ^1.3.0
+#  flutter_paytabs_bridge_emulator: ^1.0.14
+#  flutter_in_app_billing: ^0.0.1
+#  in_app_purchase: ^3.0.6
+#  stripe_payment: ^1.1.4
 
 dev_dependencies:
   flutter_test:
